styles.css
/* Fredokka Sans font */
@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");

/* Noto sans */
@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");

/* *GLOBAL STYLES */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    /* Colors */
    --tainted-sephia: hsl(43, 76%, 90%);
    --red: hsl(0, 77%, 55%, 0.87);
    --green: hsla(101, 100%, 38%, 0.87);
    --light-grey: hsla(0, 0%, 86%, 0.99);
    --medium-grey: hsla(0, 0%, 50%, 0.99);

    --font-size-4: 0.25rem;
    --font-size-8: 0.5rem;
    --font-size-12: 0.75rem;
    --font-size-16: 1rem;
    --font-size-20: 1.25rem;
    --font-size-24: 1.5rem;
    --font-size-28: 1.75rem;
    --font-size-32: 2rem;
    --font-size-36: 2.25rem;
    --font-size-40: 2.5rem;
    --font-size-44: 2.75rem;
    --font-size-48: 3rem;
    --font-size-52: 3.25rem;
    --font-size-56: 3.5rem;
    --font-size-60: 3.75rem;
    --font-size-64: 4rem;
    --font-size-68: 4.25rem;
    --font-size-72: 4.5rem;
    --font-size-76: 4.75rem;
    --font-size-80: 5rem;
    --font-size-84: 5.25rem;
    --font-size-88: 5.5rem;
    --font-size-92: 5.75rem;
    --font-size-96: 6rem;
    --font-size-100: 6.25rem;

    /* font weight */
    --light: 350;
    --regular: 450;
    --semi-bold: 550;
    --bold: 650;
}

/* !GENERAL STYLES */

dialog {
    /* center all dialog boxes */
    width: min(90%, 1000px); /*width, max-width*/
    padding: 28px;
    border-radius: 20px;
    border: none;
    position: absolute;
    left: 50%;
    top: 50%;
    translate: -50% -50%;
}

.add-items-dialog,
.delete-item-dialog {
    min-height: 600px;
}

dialog::backdrop {
    background-color: rgba(0, 0, 0, 0.5); /* adjust opacity as needed */
}

main {
    padding: 100px 0;
}

/* !MULTIPLE SELECTIONS */

:is(.create-list-btn, .first-add-item-btn) {
    transition: opacity 0.3s;
    cursor: pointer;
}

:is(.create-list-btn, .first-add-item-btn):hover {
    opacity: 0.65;
}

/* align items vertically and center them both ways */
.no-lists-cont,
.add-list-form,
.update-name-form,
.delete-list-form,
.cancel-add-list-btn,
.lists-header,
.no-items-cont,
.list-item,
.total-button-cont,
.add-items-form,
.delete-item-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.add-list-form,
.update-name-form,
.delete-list-form,
.delete-item-form {
    width: 80%;
    gap: 36px;
    text-align: center;

    /*centering this way because the parent (the dialog element) element can't use display flex or grid so as not to mess with native defaults  */
    position: relative;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.new-list-img,
.delete-list-img,
.delete-item-img {
    width: 200px;
    height: 200px;
}

/* input box base styles */
.list-name-input,
.new-name-input,
.item-data-input {
    width: 100%;
    padding: 8px 20px;
    font-size: var(--font-size-24);
    outline: 0;
    background-color: var(--light-grey);
    border: 0;
    border-radius: 6px;
    height: 65px;
}

/* button containers */
.add-list-form-buttons,
.update-list-buttons,
.delete-list-buttons,
.delete-item-buttons,
.item-form-buttons {
    display: flex;
    justify-content: space-between;
    gap: 36px;
    width: 100%;
    transition: opacity 0.3s;
}

:is(
        .add-list-form-buttons,
        .update-list-buttons,
        .delete-list-buttons,
        .delete-item-buttons,
        .item-form-buttons
    )
    > button {
    cursor: pointer;
    transition: opacity 0.3s;
}

:is(
        .add-list-form-buttons,
        .update-list-buttons,
        .delete-list-buttons,
        .delete-item-buttons,
        .item-form-buttons
    )
    > button:hover {
    opacity: 0.65;
}

/* buttons inside button containers */

/* button base styles */
.create-list-btn,
.add-list-form-buttons > button,
.open-and-delete-cont > * /*targets both <a/> and <button> inside*/,
.update-list-buttons > button,
.delete-list-buttons > button,
.delete-item-buttons > button,
.item-form-buttons > button,
.first-add-item-btn {
    font-weight: var(--regular);
    color: white;
    padding: 16px 0;
    border: 0;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--font-size-32);
    width: 100%;
    height: 65px;
}

.add-list-submitter,
.change-name-submitter,
.first-add-item-btn,
.add-item-submitter,
.cancel-delete-list-btn,
.cancel-delete-item-btn,
.update-item-submitter {
    background-color: var(--green);
}

.cancel-add-list-btn,
.cancel-change-btn,
.confirm-delete-list-btn,
.confirm-delete-item-btn,
.items-form-cancel-btn {
    background-color: var(--red);
}

.name-list-label,
.delete-list-heading,
.delete-item-heading {
    font-size: var(--font-size-44);
    font-weight: var(--bold);
}

.delete-list-warning,
.delete-item-warning {
    font-size: var(--font-size-28);
    color: var(--red);
}

.no-lists-text,
.no-items-text {
    font-weight: var(--bold);
    font-size: var(--font-size-44);
}

.add-list-dialog,
.delete-list-dialog,
.delete-item-dialog {
    max-width: 1000px;
    height: 630px;
}

/* !SPECIFIC STYLES */

html,
body {
    min-height: 100vh;
}

body {
    background-color: var(--tainted-sephia);
    margin-bottom: 100px;
}

body,
input,
button {
    font-family: "Fredoka", sans-serif;
}

header {
    background-color: green;
}

/* *------------LISTS PAGE--------------------- */

.no-lists-cont {
    max-width: 434px;
    gap: 32px;
    margin: 0 auto;
}

.create-list-btn {
    font-size: var(--font-size-28);
    background-color: var(--green);
    width: 100%;
}

#no-lists-img {
    width: 100%;
}

header {
    background-color: var(--green);
    height: 100px;
}

h1 {
    font-weight: var(--semi-bold);
    font-size: var(--font-size-52);
    color: white;
}

.lists-and-add-button-cont {
    width: 80%;
    max-width: 1000px;
    margin: 0 auto;
}
/* ... */

